# jsonata-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  renovate.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: osv-scanner.yml  release-plz.yml  release.yml  rust.yaml  scorecard.yml  tag-pr.yml  validate-renovate-config.yml
docs/: status.md
src/: datetime.rs  errors.rs  evaluator.rs  lib.rs  parser.rs
src/evaluator/: frame.rs  functions.rs  value.rs
src/evaluator/value/: impls.rs  iterator.rs  range.rs  serialize.rs
src/parser/: ast.rs  expressions.rs  process.rs  symbol.rs  tokenizer.rs
tests/: testsuite.rs
tests/customsuite/: README.md
tests/customsuite/datasets/: customdataset0.json
tests/customsuite/flatten/: case000.json
tests/customsuite/flatten/skip/: case001.json
tests/customsuite/function-reduce/: case000.json
tests/testsuite/: TESTSUITE.md
tests/testsuite/groups/function-distinct/: case000.json  case001.json  case002.json  case003.json  case004.json  case005.json  case006.json  case007.json  case008.json  case009.json  case010.json  case011.json  case012.json  extra.json
tests/testsuite/groups/function-fromMillis/: case002.json  formatDateTime.json  isoWeekDate.json
tests/testsuite/groups/function-millis/: case000.json  case001.json
tests/testsuite/groups/function-round/: case012.json
tests/testsuite/groups/function-tomillis/: parseDateTime.json
tests/testsuite/groups/function-uuid/: case000.json
tests/testsuite/groups/hof-filter/: case002.json  case004.json  case005.json
tests/testsuite/groups/hof-reduce/: case004.json  case008.json
tests/testsuite/skip/function-fromMillis/: formatDateTime.json
tests/testsuite/skip/function-toMillis/: parseDateTime.json
