[package]
name = "jsonata-rs"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Stedi"]
description = "An (incomplete) implementation of JSONata in Rust"
homepage = "https://github.com/Stedi/jsonata-rs/"
repository = "https://github.com/Stedi/jsonata-rs/"
keywords = ["jsonata", "json"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
bitflags = "2.5.0"
bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }
dtoa = "1.0.9"
base64 = "0.22.1"
serde_json = "1.0.117"

[dev-dependencies]
test-case = "3.3.1"
test-generator = "0.3.1"

[build-dependencies]
glob = "0.3"
